crates/oxvg_optimiser/src/jobs/snapshots/oxvg_optimiser__jobs__convert_path_data__convert_path_data-22.snap
---
source: crates/oxvg_optimiser/src/jobs/convert_path_data.rs
expression: "test_config(r#\"{ \"convertPathData\": {} }\"#,\nSome(r#\"<svg xmlns=\"http://www.w3.org/2000/svg\" width=\"48\" height=\"48\">\n    <path d=\"M 6 6 h 0.1 h 0.2\"/>\n</svg>\"#))?"
---
<svg xmlns="http://www.w3.org/2000/svg" width="48" height="48">
    <path d="M6 6h.3"/>
</svg>
