crates/oxvg_optimiser/src/jobs/snapshots/oxvg_optimiser__jobs__convert_path_data__convert_path_data-26.snap
---
source: crates/oxvg_optimiser/src/jobs/convert_path_data.rs
expression: "test_config(r#\"{ \"convertPathData\": {} }\"#,\nSome(r#\"<svg viewBox=\"0 0 20 20\">\n    <path d=\"M0 0q2 0 5 5t5 5q5 0 5 5\"/>\n    <path d=\"M0 0q2 0 5 5t5 5q2 0 5-2\"/>\n</svg>\"#))?"
---
<svg viewBox="0 0 20 20">
    <path d="M0 0q2 0 5 5t5 5q5 0 5 5"/>
    <path d="M0 0q2 0 5 5t5 5 5-2"/>
</svg>
