crates/oxvg_optimiser/src/jobs/snapshots/oxvg_optimiser__jobs__convert_path_data__convert_path_data-27.snap
---
source: crates/oxvg_optimiser/src/jobs/convert_path_data.rs
expression: "test_config(r#\"{ \"convertPathData\": {} }\"#,\n        Some(r#\"<svg>\n    <path d=\"m 0 12 C 4 4 8 4 12 12\"/>\n</svg>\"#))?"
---
<svg>
    <path d="M0 12q6-12 12 0"></path>
</svg>
