crates/oxvg_optimiser/src/jobs/snapshots/oxvg_optimiser__jobs__convert_path_data__convert_path_data-3.snap
---
source: crates/oxvg_optimiser/src/jobs/convert_path_data.rs
expression: "test_config(r#\"{ \"convertPathData\": {} }\"#,\nSome(r#\"<svg xmlns=\"http://www.w3.org/2000/svg\">\n    <path d=\"M 10,50 M 20,60\"/>\n    <path d=\"M 10,50 20,60\"/>\n    <path d=\"M 10,50 L 20,30 L 40,60\"/>\n    <path d=\"M 10,50 L 20,30 40,60\"/>\n    <path d=\"M 10,50 C 20,30 40,50 60,70 C 40,40 50,60 70,80\"/>\n    <path d=\"M 10,50 C 20,30 40,50 60,70 40,40 50,60 70,80\"/>\n    <path d=\"M 10,50 C 20,30 40,50 60,70 S 30,30 40,50 S 60,70 80,100\"/>\n    <path d=\"M 10,50 C 20,30 40,50 60,70 S 30,30 40,50 60,70 80,100\"/>\n    <path d=\"M 10,50 Q 30,60 30,70 Q 40,70 50,90\"/>\n    <path d=\"M 10,50 Q 30,60 30,70 40,70 50,90\"/>\n    <path d=\"M 10,50 Q 30,60 30,70 T 40,70 T 50,90\"/>\n    <path d=\"M 10,50 Q 30,60 30,70 T 40,70 50,90\"/>\n    <path d=\"M 10,50 A 20,60 45 0,1 40,70 A 30,50 -30 1,1 50,70\"/>\n    <path d=\"M 10,50 A 20,60 45 0,1 40,70 30,50 -30 1,1 50,70\"/>\n    <style>\n      .marker-mid { marker-mid: url(#); }\n    </style>\n    <path d=\"M0,0 0,5 0,10\" class=\"marker-mid\"/>\n    <path d=\"M0,0 0,5 0,10\" marker-mid=\"url(#)\"/>\n    <style>\n      .linecap-round { stroke: black; stroke-linecap: round; }\n      .linecap-butt { stroke: black; stroke-linecap: butt; }\n    </style>\n    <path d=\"M0,0 0,0\" stroke=\"black\" stroke-linecap=\"round\"/>\n    <path d=\"M0,0 0,0\" class=\"linecap-round\"/>\n    <path d=\"M0,0 0,0\" stroke=\"black\" stroke-linecap=\"butt\"/>\n    <path d=\"M0,0 0,0\" class=\"linecap-butt\"/>\n</svg>\"#))?"
---
<svg xmlns="http://www.w3.org/2000/svg">
    <path d=""/>
    <path d="m10 50 10 10"/>
    <path d="m10 50 10-20 20 30"/>
    <path d="m10 50 10-20 20 30"/>
    <path d="M10 50c10-20 30 0 50 20-20-30-10-10 10 10"/>
    <path d="M10 50c10-20 30 0 50 20-20-30-10-10 10 10"/>
    <path d="M10 50c10-20 30 0 50 20S30 30 40 50s20 20 40 50"/>
    <path d="M10 50c10-20 30 0 50 20S30 30 40 50s20 20 40 50"/>
    <path d="M10 50q20 10 20 20 10 0 20 20"/>
    <path d="M10 50q20 10 20 20 10 0 20 20"/>
    <path d="M10 50q20 10 20 20t10 0 10 20"/>
    <path d="M10 50q20 10 20 20t10 0 10 20"/>
    <path d="M10 50a20 60 45 0 1 30 20 30 50-30 1 1 10 0"/>
    <path d="M10 50a20 60 45 0 1 30 20 30 50-30 1 1 10 0"/>
    <style>
        .marker-mid{marker-mid:url(#)}
    </style>
    <path d="M0 0v5 5" class="marker-mid"/>
    <path d="M0 0v5 5" marker-mid="url(#)"/>
    <style>
        .linecap-round{stroke:#000;stroke-linecap:round}.linecap-butt{stroke:#000;stroke-linecap:butt}
    </style>
    <path d="M0 0Z" stroke="#000" stroke-linecap="round"/>
    <path d="M0 0Z" class="linecap-round"/>
    <path d="" stroke="#000" stroke-linecap="butt"/>
    <path d="" class="linecap-butt"/>
</svg>
