crates/oxvg_optimiser/src/jobs/snapshots/oxvg_optimiser__jobs__convert_path_data__convert_path_data-31.snap
---
source: crates/oxvg_optimiser/src/jobs/convert_path_data.rs
expression: "test_config(r#\"{ \"convertPathData\": {} }\"#,\nSome(r#\"<svg xmlns=\"http://www.w3.org/2000/svg\" viewBox=\"0 0 128 128\">\n   <path d=\"m 0,0 c 0.01645,-3.54e-4 0.03363,-7.2e-4 0.05249,5e-6 0.07524,0.0028 0.485953,0.0069 0.911289,0.0091 z\" />\n</svg>\"#))?"
---
<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 128 128">
    <path d="M0 0h.052c.075.003.486.007.911.009Z"/>
</svg>
