crates/oxvg_optimiser/src/jobs/snapshots/oxvg_optimiser__jobs__convert_path_data__convert_path_data-4.snap
---
source: crates/oxvg_optimiser/src/jobs/convert_path_data.rs
expression: "test_config(r#\"{ \"convertPathData\": {} }\"#,\nSome(r#\"<svg xmlns=\"http://www.w3.org/2000/svg\">\n    <path d=\"M 10,50 l 20,30 L 20,30\"/>\n    <path d=\"M 10,50 c 20,30 40,50 60,70 C 20,30 40,50 60,70\"/>\n    <path d=\"M 10,50 c 20,30 40,50 60,70 s 20,40 40,50 L 10,20\"/>\n    <path d=\"M 10,50 q 20,60 30,70 Q 20,60 30,70\"/>\n    <path d=\"M 10,50 q 20,60 30,70 t 40,70 L 10,20\"/>\n    <path d=\"M 10,50 a 20,60 45 0,1 40,70 A 20,60 45 0,1 40,70\"/>\n    <path d=\"M1 1 v8 c0-2 0-4 0-6\"/>\n</svg>\"#))?"
---
<svg xmlns="http://www.w3.org/2000/svg">
    <path d="m10 50 20 30-10-50"/>
    <path d="M10 50c20 30 40 50 60 70-50-90-30-70-10-50"/>
    <path d="M10 50c20 30 40 50 60 70s20 40 40 50L10 20"/>
    <path d="M10 50q20 60 30 70-20-60-10-50"/>
    <path d="M10 50q20 60 30 70t40 70L10 20"/>
    <path d="M10 50a1 3 45 0 1 40 70 1 3 45 0 1-10-50"/>
    <path d="M1 1v8-6"/>
</svg>
